tests/Core/negative/test005.jvc
-- no matching case branch

type list {
  nil : list;
  cons : Any -> list -> list;
};

case cons 1 nil of {
  nil := true
}
